@@ -30,7 +30,6 @@ requires:
   DateTime: 0
   Error::Pure: 0.15
   Exporter: 0
-  List::MoreUtils: 0
   List::Util: 1.33
   Mo: 0
   Mo::utils: 0.14
