@@ -24,7 +24,6 @@ requires 'Error::Pure' => 0.15;
 requires 'Exporter' => 0;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.14;
-requires 'List::MoreUtils' => 0;
 requires 'List::Util' => 1.33;
 requires 'Readonly' => 0;
 requires 'Unicode::UTF8' => 0;
